--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,152 @@
-body {
-    background-color: aquamarine;
+
+body{
+    margin: 0%;
+    padding: 0%;
+    background-image:url(/public/img/fundohomepage.png);
+    width: 100%;
+    font-family: Arial, sans-serif;
 }
+
+header {
+    top: 0%; 
+    padding: 0%;
+    height: 150px;
+    position: relative;
+    display: flex;                 
+    justify-content: flex-start;
+}
+
+  /* cabeçario */ 
+  .topo { 
+    background-color: #140c5d; 
+    color: white; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 15px 30px; 
+  } 
+  .logo img { 
+   width: 185px;
+   height: 185px;
+  
+  } 
+  .menu-topo { 
+    display: flex; 
+    align-items: center; 
+    gap: 20px; 
+  } 
+  .menu-topo a { 
+    color: white; 
+    text-decoration: none; 
+    font-weight: bold; 
+    font-size: 40px;
+    
+  }
+  
+  .pesquisa { 
+    display: flex; 
+    align-items: center; 
+    background: white; 
+    border-radius: 4px; 
+    overflow: hidden; 
+  } 
+  .pesquisa input { 
+    border: none; 
+    padding: 10px 80px; 
+    outline: none; 
+  } 
+  .pesquisa button { 
+    background: none; 
+    border: none; 
+    padding: 5px 10px; 
+    cursor: pointer; 
+  } 
+
+  /* ===== BANNER ===== */ 
+  .banner { 
+    width: 100%; 
+  } 
+  .banner img { 
+    width: 100%; 
+    height: auto; 
+    display: block; 
+  } 
+
+  /* ===== CONTEÚDO PRINCIPAL ===== */ 
+  .principal { 
+    display: flex; 
+    padding: 20px; 
+    gap: 20px; 
+    background: linear-gradient(to bottom, #b9e2ff, #dff2ff); 
+  }
+
+  /* MENU LATERAL */ 
+  .menu-lateral { 
+    width: 20%; 
+    background: #57b0f5; 
+    color: white 
+    padding: 15px; 
+    border-radius: 8px; 
+  } 
+  .menu-lateral h1 { 
+     color: white;
+     font-size: 50px;
+     text-align: center;
+  } 
+  .menu-lateral ul { 
+    list-style: none; 
+  } 
+  .menu-lateral ul li { 
+    margin: 50px 0; 
+    color: white;
+  } 
+  .menu-lateral ul li a {
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+  }
+
+  /* ÁREA DESTAQUES */ 
+  .conteudo { 
+    width: 80%; 
+    display: flex; 
+    flex-direction: column; 
+    gap: 20px; 
+  } 
+  .box { 
+    display: flex; 
+    background: rgb(147, 216, 255); 
+    border-radius: 8px; 
+    padding: 15px; 
+    gap: 15px; 
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.1); 
+    
+  } 
+  .box img { 
+    width: 200px; 
+    border-radius: 5px; 
+  }
+  .box h1 {
+  margin: 0 0 10px 0; 
+  font-size: 30px;
+  color: #000;
+  display: block; 
+}
+  .box p {
+  margin: 0;
+  padding: 0; 
+  line-height: 1.6;
+  font-size: 20px;
+}
+
+  /* ===== RODAPÉ ===== */ 
+
+  .rodape { 
+    text-align: center;
+    color: rgb(255, 254, 254); 
+    background:rgb(0, 32, 113)
+  } 
+
+
+  
